# PwAutomation

./: .gitignore  automation_log.txt  main.py  pyproject.toml  requirements.txt
communication/: slackbot.py
config/: settings.py  settings.toml
data_processing/: data_utils.py
site_automation/: __init__.py  navigation.py  site_nav.py
test/: test_config.py  test_pw.py  test_siteautomation.py
