[tool.poetry]
name = "mixlabscraper"
version = "0.1.0"
description = "bot to automate webscraping of data"
authors = ["AremisJ <devpythonaj@gmail.com>"]
license = ''
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "1.41.2"
annotated-types = "0.6.0"
beautifulsoup4 = "4.12.3"
cffi = "1.16.0"
colorama = "0.4.6"
cryptography = "42.0.5"
dnspython = "2.6.1"
email-validator = "2.1.0.post1"
greenlet = "3.0.3"
idna = "3.6"
importlib-metadata = "7.0.1"
iniconfig = "2.0.0"
jaraco-classes = "3.3.1"
keyring = "24.3.0"
more-itertools = "10.2.0"
packaging = "23.2"
pluggy = "1.4.0"
pycparser = "2.21"
pydantic = "2.6.1"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.2"
pyee = "11.0.1"
pytest = "8.0.2"
python-dotenv = "1.0.1"
pywin32-ctypes = "0.2.2"
soupsieve = "2.5"
toml = "0.10.2"
tomlkit = "0.12.3"
typing-extensions = "4.10.0"
typish = "1.9.3"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
